--- a/package.json
+++ b/package.json
@@ -1,30 +1,34 @@
 {
   "name": "protochess",
-  "version": "1.0.0",
-  "description": "Custom chess pieces website",
-  "main": "index.js",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "boardgame.io": "0.37.2",
-    "esm": "^3.2.25",
-    "react": "16.3.2",
-    "react-dom": ">=16.3.2",
-    "react-scripts": "2.1.1"
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.4.1",
+    "@testing-library/user-event": "^7.2.1",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
+    "react-scripts": "3.4.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "cd protochess-client && npm start"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/raytran/protochess.git"
+  "eslintConfig": {
+    "extends": "react-app"
   },
-  "keywords": [
-    "react"
-  ],
-  "author": "Raymond Tran",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/raytran/protochess/issues"
-  },
-  "homepage": "https://github.com/raytran/protochess#readme"
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
