--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.1",
     "@testing-library/user-event": "^7.2.1",
+    "boardgame.io": "^0.37.2",
+    "chess.js": "^0.10.3",
+    "esm": "^3.2.25",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-scripts": "3.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
+    "server": "node -r esm ./src/server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
