--- a/protochess-client/package.json
+++ b/protochess-client/package.json
@@ -16,6 +16,7 @@
     "clipboardy": "^2.2.0",
     "colyseus": "^0.12.3",
     "colyseus.js": "^0.12.1",
+    "protochess-shared": "file:../protochess-shared",
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-copy-to-clipboard": "^5.0.2",
