--- a/protochess-server/package.json
+++ b/protochess-server/package.json
@@ -27,6 +27,7 @@
     "colyseus": "^0.12.0",
     "cors": "^2.8.5",
     "express": "^4.16.4",
-    "express-jwt": "^5.3.1"
+    "express-jwt": "^5.3.1",
+    "protochess-shared": "file:../protochess-shared"
   }
 }
