--- a/protochess-client/package.json
+++ b/protochess-client/package.json
@@ -12,6 +12,7 @@
     "@types/react-copy-to-clipboard": "^4.3.0",
     "@types/react-dom": "^16.9.5",
     "@types/react-router-dom": "^5.1.3",
+    "anonymus": "^2.0.0",
     "bootstrap": "^4.4.1",
     "clipboardy": "^2.2.0",
     "colyseus": "^0.12.3",
