--- a/protochess-server/package.json
+++ b/protochess-server/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@colyseus/monitor": "^0.11.0",
     "@colyseus/social": "^0.10.2",
+    "anonymus": "^2.0.0",
     "colyseus": "^0.12.0",
     "cors": "^2.8.5",
     "express": "^4.16.4",
