--- a/protochess-server/package.json
+++ b/protochess-server/package.json
@@ -29,6 +29,7 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-jwt": "^5.3.1",
+    "protochess-core": "file:../protochess-core",
     "protochess-shared": "file:../protochess-shared"
   }
 }
