--- a/protochess-client/package.json
+++ b/protochess-client/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.1",
     "@testing-library/user-event": "^7.2.1",
+    "@types/fabric": "^3.6.2",
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.29",
     "@types/react": "^16.9.23",
@@ -17,6 +18,7 @@
     "clipboardy": "^2.2.0",
     "colyseus": "^0.12.3",
     "colyseus.js": "^0.12.1",
+    "fabric": "^4.0.0-beta.7",
     "protochess-shared": "file:../protochess-shared",
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0-beta.17",
