Moved chess logic to protochess-shared; fixed bugs with logic; started client-side chess rendering via fabric.js.

--- a/protochess-shared/tsconfig.json
+++ b/protochess-shared/tsconfig.json
@@ -3,6 +3,7 @@
     "outDir": "lib",
     "target": "es6",
     "module": "commonjs",
+    "lib": ["es6"],
     "strict": true,
     "esModuleInterop": true,
     "experimentalDecorators": true
