Flips the board to face each player; allowed opponents to only control their own pieces.

--- a/protochess-client/package.json
+++ b/protochess-client/package.json
@@ -19,6 +19,7 @@
     "colyseus": "^0.12.3",
     "colyseus.js": "^0.12.1",
     "fabric": "^4.0.0-beta.7",
+    "fabric-history": "^1.1.0",
     "protochess-shared": "file:../protochess-shared",
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0-beta.17",
