Moved to CSS instead of canvas. Faster animations + higher definition rendering.

--- a/protochess-shared/tsconfig.json
+++ b/protochess-shared/tsconfig.json
@@ -3,7 +3,9 @@
     "outDir": "lib",
     "target": "es6",
     "module": "commonjs",
-    "lib": ["es6"],
+    "lib": [
+      "es6"
+    ],
     "strict": true,
     "esModuleInterop": true,
     "experimentalDecorators": true
