--- a/protochess-client/package.json
+++ b/protochess-client/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@svgr/webpack": "^5.3.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.1",
     "@testing-library/user-event": "^7.2.1",
+    "@types/d3": "^5.7.2",
     "@types/fabric": "^3.6.2",
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.29",
@@ -18,13 +20,14 @@
     "clipboardy": "^2.2.0",
     "colyseus": "^0.12.3",
     "colyseus.js": "^0.12.1",
-    "fabric": "^4.0.0-beta.7",
-    "fabric-history": "^1.1.0",
+    "immutable": "^4.0.0-rc.12",
     "protochess-shared": "file:../protochess-shared",
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.13.0",
+    "react-draggable": "^4.2.0",
+    "react-prop-transition": "^1.0.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "typescript": "^3.7.5"
