Added perft. Need to fix perft(3) and above.

--- a/protochess-engine/package.json
+++ b/protochess-engine/package.json
@@ -6,6 +6,7 @@
   "gypfile": true,
   "scripts": {
     "compile": "cmake-js compile",
+    "clean": "cmake-js clean",
     "test": "ts-node index.ts"
   },
   "devDependencies": {
