Code cleanup; switched to own implementation of bitboard.

--- a/protochess-engine-3/CMakeLists.txt
+++ b/protochess-engine-3/CMakeLists.txt
@@ -7,9 +7,9 @@ if (NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE Release)
 endif ()
 
-set(CMAKE_CXX_FLAGS "-Wall -Wextra")
-set(CMAKE_CXX_FLAGS_DEBUG "-g")
-set(CMAKE_CXX_FLAGS_RELEASE "-O3")
+#set(CMAKE_CXX_FLAGS "-Wall -Wextra")
+#set(CMAKE_CXX_FLAGS_DEBUG "-g")
+#set(CMAKE_CXX_FLAGS_RELEASE "-O3")
 
 #set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O0")
 #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0")
@@ -18,7 +18,7 @@ set(CMAKE_CXX_FLAGS_RELEASE "-O3")
 find_package(Boost 1.36.0 REQUIRED)
 include_directories(${Boost_INCLUDE_DIRS})
 
-add_library(protochess_engine_3 SHARED src/protochess_engine.cpp include/protochess_engine.h src/types.h src/position.cpp src/position.h src/bitboardutil.cpp src/bitboardutil.h src/movegen.cpp src/movegen.h src/attacktables.cpp src/attacktables.h src/piecerules.cpp src/piecerules.h src/rankfile.h)
+add_library(protochess_engine_3 SHARED src/protochess_engine.cpp include/protochess_engine.h src/types.h src/position.cpp src/position.h src/bitboardutil.cpp src/bitboardutil.h src/movegen.cpp src/movegen.h src/attacktables.cpp src/attacktables.h src/piecerules.cpp src/piecerules.h src/rankfile.h src/bitboard.h src/rulebook.cpp src/rulebook.h src/perft.cpp src/perft.h src/rankfile.cpp)
 
 
 # Add an executable with the above sources
