--- a/protochess-engine-rs/Cargo.toml
+++ b/protochess-engine-rs/Cargo.toml
@@ -5,6 +5,8 @@ authors = ["raytr <ray.tran120@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[profile.dev]
+opt-level = 3
 
 [dependencies]
 arrayvec = "0.5.1"
