--- a/protochess-server-rs/Cargo.toml
+++ b/protochess-server-rs/Cargo.toml
@@ -14,5 +14,6 @@ serde_json = "1.0"
 futures = { version = "0.3", default-features = false }
 uuid = { version = "0.4", features = ["serde", "v4"] }
 pretty_env_logger = "0.4.0"
+lazy_static = "1.4.0"
 
 protochess-engine-rs = { git = "https://github.com/raytran/protochess" }
