--- a/protochess-front/package.json
+++ b/protochess-front/package.json
@@ -16,6 +16,8 @@
   "devDependencies": {
     "cross-env": "^7.0.2",
     "@rollup/plugin-node-resolve": "^7.1.3",
+    "@surma/rollup-plugin-off-main-thread": "^1.4.1",
+    "@wasm-tool/rollup-plugin-rust": "^1.0.3",
     "@rollup/plugin-commonjs": "^11.1.0",
     "concurrently": "^5.1.0",
     "del": "^5.1.0",
@@ -25,7 +27,8 @@
     "rollup-plugin-copy": "^3.3.0",
     "rollup-plugin-livereload": "^1.2.0",
     "rollup-plugin-svelte": "^5.2.1",
-    "rollup-plugin-terser": "^5.3.0"
+    "rollup-plugin-terser": "^5.3.0",
+    "protochess-engine-wasm": "file:../protochess-engine-wasm/pkg"
   },
   "dependencies": {
     "@sveltech/routify": "^1.7.12",
