--- a/protochess-front/package.json
+++ b/protochess-front/package.json
@@ -14,25 +14,29 @@
     "routify": "routify -D"
   },
   "devDependencies": {
-    "cross-env": "^7.0.2",
-    "@rollup/plugin-node-resolve": "^7.1.3",
-    "@surma/rollup-plugin-off-main-thread": "^1.4.1",
-    "@wasm-tool/rollup-plugin-rust": "^1.0.3",
     "@rollup/plugin-commonjs": "^11.1.0",
+    "@rollup/plugin-node-resolve": "^7.1.3",
+    "@wasm-tool/rollup-plugin-rust": "^1.0.3",
     "concurrently": "^5.1.0",
+    "cross-env": "^7.0.2",
     "del": "^5.1.0",
     "npm-run-all": "^4.1.5",
-    "spassr": "^1.0.3",
     "rollup": "^2.6.1",
     "rollup-plugin-copy": "^3.3.0",
     "rollup-plugin-livereload": "^1.2.0",
+    "rollup-plugin-postcss": "^3.1.2",
     "rollup-plugin-svelte": "^5.2.1",
     "rollup-plugin-terser": "^5.3.0",
-    "protochess-engine-wasm": "file:../protochess-engine-wasm/pkg"
+    "sass": "^1.26.9",
+    "spassr": "^1.0.3",
+    "svelte-preprocess": "^3.9.10",
+    "svelte-tabs": "^1.1.0"
   },
   "dependencies": {
     "@sveltech/routify": "^1.7.12",
+    "bulma": "^0.9.0",
     "clipboard": "^2.0.6",
+    "svelma": "^0.3.2",
     "svelte": "^3.20.1"
   }
 }
