--- a/protochess-front/scripts/netlify/netlify.toml
+++ b/protochess-front/scripts/netlify/netlify.toml
@@ -6,11 +6,11 @@
 
 [[redirects]]
   # SSR and SPA
-  from = "/*"
-  to = "/.netlify/functions/ssr"
-  status = 200
+  #from = "/*"
+  #to = "/.netlify/functions/ssr"
+  #status = 200
   
   # SPA only
-  # from = "/*"
-  # to = "/__app.html"
-  # status = 200
+  from = "/*"
+  to = "/__app.html"
+  status = 200
