--- a/protochess-front/package.json
+++ b/protochess-front/package.json
@@ -33,6 +33,7 @@
     "bulma": "^0.9.0",
     "svelma": "^0.3.2",
     "svelte-tabs": "^1.1.0",
+    "reconnecting-websocket": "^4.4.0",
     "clipboard": "^2.0.6"
   },
   "dependencies": {
