--- a/protochess-front/package.json
+++ b/protochess-front/package.json
@@ -3,40 +3,34 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "run-p routify rollup",
-    "dev-dynamic": "cross-env BUNDLING=dynamic npm run dev",
     "build": "npm run routify -- -b && rollup -c",
-    "serve": "spassr --serve-spa --serve-ssr",
-    "export": "routify export",
-    "build:docker": "npm run build && ./scripts/docker/docker-build.sh",
-    "deploy:now": "cd scripts/now && npm run deploy",
-    "deploy:netlify": "cd scripts/netlify && npm run deploy",
+    "serve": "spassr --serve-spa",
     "rollup": "rollup -cw",
     "routify": "routify -D"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^11.1.0",
-    "@rollup/plugin-node-resolve": "^7.1.3",
+    "@rollup/plugin-commonjs": "^12.0.0",
+    "@rollup/plugin-node-resolve": "^8.0.0",
     "@wasm-tool/rollup-plugin-rust": "^1.0.3",
-    "concurrently": "^5.1.0",
-    "cross-env": "^7.0.2",
+    "bulma": "^0.9.0",
+    "clipboard": "^2.0.6",
     "del": "^5.1.0",
     "npm-run-all": "^4.1.5",
-    "rollup": "^2.6.1",
+    "reconnecting-websocket": "^4.4.0",
+    "rollup": "^2.3.4",
     "rollup-plugin-copy": "^3.3.0",
-    "rollup-plugin-livereload": "^1.2.0",
+    "rollup-plugin-livereload": "^1.0.0",
     "rollup-plugin-postcss": "^3.1.2",
-    "rollup-plugin-svelte": "^5.2.1",
-    "rollup-plugin-terser": "^5.3.0",
+    "rollup-plugin-svelte": "^5.0.3",
+    "rollup-plugin-terser": "^5.1.2",
     "sass": "^1.26.9",
     "spassr": "^1.0.3",
-    "svelte-preprocess": "^3.9.10",
-    "bulma": "^0.9.0",
     "svelma": "^0.3.2",
-    "svelte-tabs": "^1.1.0",
-    "clipboard": "^2.0.6"
+    "svelte-preprocess": "^3.9.10",
+    "svelte-tabs": "^1.1.0"
   },
   "dependencies": {
-    "@sveltech/routify": "^1.7.12",
-    "svelte": "^3.20.1"
+    "@sveltech/routify": "^1.7.13",
+    "svelte": "^3.0.0"
   }
 }
